@startuml

package ucf.assignments {

    note "More details included in other diagrams" as N1

    package model {

        class ToDo {}

        class ToDoListDAO {}

        class ToDoListManagerModel {}
    }

    package factories {

        class PopUps {}

        class TaskCell {}
    }

    package util {

        class ToDoListSerializer {}
    }

    package controllers {

        class ToDoListManagerController {}

        class TaskCellController {}
    }

    class ToDoListManager {}

    ToDoListManager -> ToDoListManagerController : creates
    ToDoListManagerController -> TaskCell : uses
    ToDoListManagerController --> PopUps : uses
    TaskCellController <- TaskCell : creates
    ToDoListManagerModel o- ToDo
    ToDoListDAO --o ToDoListManagerModel
    ToDoListDAO --> ToDoListSerializer : uses
    ToDoListManagerModel -o ToDoListManagerController
}

@enduml